After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 746575 - cally-actor: Don't assume X11 backend is used when supported
cally-actor: Don't assume X11 backend is used when supported
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2015-03-21 15:56 UTC by Florian Müllner
Modified: 2015-03-23 11:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
cally-actor: Don't assume X11 backend is used when supported (3.31 KB, patch)
2015-03-21 15:56 UTC, Florian Müllner
none Details | Review
cally-actor: Don't assume X11 backend is used when supported (3.56 KB, patch)
2015-03-21 23:53 UTC, Emmanuele Bassi (:ebassi)
committed Details | Review

Description Florian Müllner 2015-03-21 15:56:16 UTC
See patch, and https://bugzilla.redhat.com/show_bug.cgi?id=1203562 for a downstream report.
Comment 1 Florian Müllner 2015-03-21 15:56:20 UTC
Created attachment 300029 [details] [review]
cally-actor: Don't assume X11 backend is used when supported

_cally_actor_get_top_level_origin() uses a compile time check
without runtime check, which will obviously fail when another
backend like wayland is used.
Comment 2 Emmanuele Bassi (:ebassi) 2015-03-21 23:43:26 UTC
Review of attachment 300029 [details] [review]:

::: clutter/cally/cally-actor.c
@@ +755,3 @@
   gint y = 0;
 
 #ifdef HAVE_CLUTTER_GLX

This should really be

#ifdef CLUTTER_WINDOWING_X11

We haven't used HAVE_CLUTTER_GLX in a long time, even if we're still defining it.

@@ +780,3 @@
+        g_warning ("[x11] We were not able to get proper absolute "
+                   "position of the stage");
+      /* FIXME: what happens if you use another display with

This is missing an else, otherwise on X11 you'll warn twice.
Comment 3 Emmanuele Bassi (:ebassi) 2015-03-21 23:53:37 UTC
Created attachment 300054 [details] [review]
cally-actor: Don't assume X11 backend is used when supported

_cally_actor_get_top_level_origin() uses a compile time check
without runtime check, which will obviously fail when another
backend like wayland is used.
Comment 4 Emmanuele Bassi (:ebassi) 2015-03-23 11:37:54 UTC
Pushed to master, it's in the 1.22.0 release.

Thanks!